--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "5.2.0",
+    "express": "^4.18.2",
+    "prisma": "^5.2.0"
   }
 }
