--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/pdfmake": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
@@ -17,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "5.2.0",
     "express": "^4.18.2",
+    "pdfmake": "^0.2.7",
     "prisma": "^5.2.0"
   }
 }
